[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobra-log"
dynamic = ["version"]
description = "A lightweight and easy-to-use logging library for Python."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Zhen Tian", email = "zhen.tian.cs@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/tinchen777/cobra-log.git"
Repository = "https://github.com/tinchen777/cobra-log.git"
Issues = "https://github.com/tinchen777/cobra-log.git/issues"

[tool.setuptools.dynamic]
version = {attr = "cobra_log.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cobra_log*"]
